# Text-chat-with-P2P-file-transfer

./: .gitignore  CMakeLists.txt  Makefile
include/: Client.h  ClientInfo.h  Server.h  Util.h  command.h  global.h  logger.h
src/: Client.cpp  ClientInfo.cpp  Server.cpp  Util.cpp  command.cpp  wasifale_assignment1.cpp
